Stock update and search filter